@@ -33,10 +33,11 @@
               type: object
               description: >
                 The HTTP headers received
-            - name: status_code
+            - name: code
               type: keyword
               description: >
                 The HTTP status code
+              example: 404
             - name: phrase
               type: keyword
               example: Not found
