@@ -124,7 +124,7 @@ Example:
         "Server": "Google Frontend",
         "X-Cloud-Trace-Context": "3f532d170112fc5b2a0b94fcbd6493b3"
       },
-      "status_code": 200
+      "code": 200
     }
   },
   "metricset": {
