@@ -25,6 +25,7 @@ https://github.com/elastic/beats/compare/v6.0.0-beta2...master[Check the HEAD di
 *Metricbeat*
 
 - Rename `heap_init` field to `heap.init`. {pull}5320[5320]
+- Rename `http.response.status_code` field to `http.response.code`. {pull}5521[5521]
 
 
 *Packetbeat*
